fixed index.html table overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,12 +16,3 @@
 body {
 background-color: #ffe0b3; 
 }
-table {
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
-}
-table thead tbody {
-    display: table;
-    width: 100%;
-}
