--- a/app/assets/stylesheets/statics.scss
+++ b/app/assets/stylesheets/statics.scss
@@ -644,6 +644,11 @@ progress {
   .container-sm, .container {
     max-width: 540px;
   }
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 }
 @media (min-width: 768px) {
   .container-md, .container-sm, .container {
@@ -892,6 +897,11 @@ progress {
 }
 
 @media (min-width: 576px) {
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
   .col-sm {
     flex: 1 0 0%;
   }
@@ -2127,6 +2137,11 @@ progress {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
+  table {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+   }
 }
 @media (max-width: 767.98px) {
   .table-responsive-md {
